--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,6 @@ upstream http://18.205.156.119/ {
         proxy_pass http://18.205.156.119/;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
-        proxy_redirect off;
+        proxy_redirect on;
     }
    }
